--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -56,8 +56,8 @@
       <aside class="p-sidebar">
         <div class="p-sidebar__content">
           <form class="p-search-box" action="/search">
-            <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search components" title="Search the documentation" required />
-            <button type="reset" class="p-search-box__reset u-no-margin--right" alt="reset" onclick="resetFilter()"><i class="p-icon--close"></i></button>
+            <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
+            <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right" alt="reset"><i class="p-icon--close"></i></button>
             <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
           </form>
           <nav class="p-sidebar-nav">
@@ -165,73 +165,6 @@
                   <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == 'https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch' %}is-active{% endif %}" href="https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch">Download the Sketch UI Kit</a></li>
                 </ul>
               </li>
-            </ul>
-
-            <ul class="p-sidebar-nav__list u-hide" id="docs-list-sorted">
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/accordion' %}is-active{% endif %}" href="/patterns/accordion">Accordion</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/align' %}is-active{% endif %}" href="/utilities/align">Alignment</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/examples' %}is-active{% endif %}" href="/examples">All component examples</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/animation-settings' %}is-active{% endif %}" href="/settings/animation-settings">Animations</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/article-pagination' %}is-active{% endif %}" href="/patterns/article-pagination">Article pagination</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/assets-settings' %}is-active{% endif %}" href="/settings/assets-settings">Assets</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/baseline-grid' %}is-active{% endif %}" href="/utilities/baseline-grid">Baseline grid</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/breadcrumbs' %}is-active{% endif %}" href="/patterns/breadcrumbs">Breadcrumbs</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/breakpoint-settings' %}is-active{% endif %}" href="/settings/breakpoint-settings">Breakpoints</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/building-vanilla' %}is-active{% endif %}" href="/building-vanilla">Building with Vanilla</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/buttons' %}is-active{% endif %}" href="/patterns/buttons">Buttons</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/card' %}is-active{% endif %}" href="/patterns/card">Cards</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/code' %}is-active{% endif %}" href="/base/code">Code</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/color-settings' %}is-active{% endif %}" href="/settings/color-settings">Color</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/contextual-menu' %}is-active{% endif %}" href="/patterns/contextual-menu">Contextual menu</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/clearfix' %}is-active{% endif %}" href="/utilities/clearfix">Clearfix</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/customising-vanilla' %}is-active{% endif %}" href="/customising-vanilla">Customising Vanilla</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == 'https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch' %}is-active{% endif %}" href="https://assets.ubuntu.com/latest-redirects/vanilla-framework.sketch">Download the Sketch UI Kit</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/embedded-media' %}is-active{% endif %}" href="/utilities/embedded-media">Embedded media</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/equal-height' %}is-active{% endif %}" href="/utilities/equal-height">Equal height</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/floats' %}is-active{% endif %}" href="/utilities/floats">Floats</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/font-settings' %}is-active{% endif %}" href="/settings/font-settings">Font</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/forms' %}is-active{% endif %}" href="/base/forms">Forms</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/functions' %}is-active{% endif %}" href="/utilities/functions">Functions</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/' %}is-active{% endif %}" href="/">Get started</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/grid' %}is-active{% endif %}" href="/patterns/grid">Grid</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/heading-icon' %}is-active{% endif %}" href="/patterns/heading-icon">Heading icon</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/hide' %}is-active{% endif %}" href="/utilities/hide">Hide</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/icons' %}is-active{% endif %}" href="/patterns/icons">Icons</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/image-position' %}is-active{% endif %}" href="/utilities/image-position">Image position</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/images' %}is-active{% endif %}" href="/patterns/images">Images</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/inline-images' %}is-active{% endif %}" href="/patterns/inline-images">Inline images</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/labels' %}is-active{% endif %}" href="/patterns/labels">Labels</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/links' %}is-active{% endif %}" href="/patterns/links">Links</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/list-tree' %}is-active{% endif %}" href="/patterns/list-tree">List tree</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/lists' %}is-active{% endif %}" href="/patterns/lists">Lists</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/margin-collapse' %}is-active{% endif %}" href="/utilities/margin-collapse">Margin collapse</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/matrix' %}is-active{% endif %}" href="/patterns/matrix">Matrix</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/media-object' %}is-active{% endif %}" href="/patterns/media-object">Media object</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/modal' %}is-active{% endif %}" href="/patterns/modal">Modal</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/muted-heading' %}is-active{% endif %}" href="/patterns/muted-heading">Muted heading</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/navigation' %}is-active{% endif %}" href="/patterns/navigation">Navigation</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/no-print' %}is-active{% endif %}" href="/utilities/no-print">No print</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/notification' %}is-active{% endif %}" href="/patterns/notification">Notifications</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/off-screen' %}is-active{% endif %}" href="/utilities/off-screen">Off-screen elements</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/padding-collapse' %}is-active{% endif %}" href="/utilities/padding-collapse">Padding collapse</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/pagination' %}is-active{% endif %}" href="/patterns/pagination">Pagination</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/placeholder-settings' %}is-active{% endif %}" href="/settings/placeholder-settings">Placeholders</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/pull-quote' %}is-active{% endif %}" href="/patterns/pull-quote">Quotes</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/reset' %}is-active{% endif %}" href="/base/reset">Reset</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/search-box' %}is-active{% endif %}" href="/patterns/search-box">Search box</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/show' %}is-active{% endif %}" href="/utilities/show">Show</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/slider' %}is-active{% endif %}" href="/patterns/slider">Slider</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/strip' %}is-active{% endif %}" href="/patterns/strip">Strip</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/spacing-settings' %}is-active{% endif %}" href="/settings/spacing-settings">Spacing</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/layout-settings' %}is-active{% endif %}" href="/settings/layout-settings">Layout</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/switch' %}is-active{% endif %}" href="/patterns/switch">Switch</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/table-of-contents' %}is-active{% endif %}" href="/patterns/table-of-contents">Table of contents</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/settings/table-layout' %}is-active{% endif %}" href="/settings/table-layout">Table layout</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/tables' %}is-active{% endif %}" href="/base/tables">Tables</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/tabs' %}is-active{% endif %}" href="/patterns/tabs">Tabs</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/patterns/tooltips' %}is-active{% endif %}" href="/patterns/tooltips">Tooltips</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/base/typography' %}is-active{% endif %}" href="/base/typography">Typography</a></li>
-              <li class="p-sidebar-nav__item"><a class="p-link--soft {% if path == '/utilities/vertically-center' %}is-active{% endif %}" href="/utilities/vertically-center">Vertically center</a></li>
             </ul>
           </nav>
         </div>
