--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,43 +23,44 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-    <div class="docs-container">
-      <header id="navigation" class="p-navigation">
-        <div class="p-navigation__row">
-          <div class="p-navigation__banner">
-            <div class="p-navigation__logo">
-              <a class="p-navigation__link" href="https://vanillaframework.io">
-                <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
-              </a>
-            </div>
-            <div class="p-navigation__toggles">
-              <a href="#navigation" class="p-navigation__toggle--open" title="about menu">About</a>
-              <a href="#navigation-closed" class="p-navigation__toggle--close" title="close about menu">About</a>
-              <a class="p-sidebar__toggle u-hide--medium u-hide--large" href="#">Patterns</a>
-            </div>
+    <header id="navigation" class="p-navigation">
+      <div class="p-navigation__row--full-width">
+        <div class="p-navigation__banner">
+          <div class="p-navigation__logo">
+            <a class="p-navigation__link" href="https://vanillaframework.io">
+              <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
+            </a>
           </div>
-          <nav class="p-navigation__nav">
-            <span class="u-off-screen">
-              <a href="#main-content">Jump to main content</a>
-            </span>
-            <ul class="p-navigation__links">
-                <li class="p-navigation__link {% if '/examples' not in path %}is-selected{% endif %}"><a href="/">Docs</a></li>
-                <li class="p-navigation__link {% if '/examples' in path %}is-selected{% endif %}"><a href="/examples">Examples</a></li>
-                <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
-              <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
-              <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
-            </ul>
-          </nav>
+          <div class="p-navigation__toggles u-hide--large u-hide--medium">
+            <a href="#navigation" class="p-navigation__toggle--open" title="about menu">About</a>
+            <a href="#navigation-closed" class="p-navigation__toggle--close" title="close about menu">About</a>
+            <a class="p-sidebar__toggle u-hide--medium u-hide--large" href="#">Patterns</a>
+          </div>
         </div>
-      </header>
-      <hr class="u-no-margin u-hide--small">
-      <aside class="p-sidebar">
-        <div class="p-sidebar__content">
+        <nav class="p-navigation__nav">
+          <span class="u-off-screen">
+            <a href="#main-content">Jump to main content</a>
+          </span>
+          <ul class="p-navigation__links">
+              <li class="p-navigation__link {% if '/examples' not in path %}is-selected{% endif %}"><a href="/">Docs</a></li>
+              <li class="p-navigation__link {% if '/examples' in path %}is-selected{% endif %}"><a href="/examples">Examples</a></li>
+              <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
+            <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
+            <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
+          </ul>
           <form class="p-search-box" action="/search">
             <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
             <button type="reset" id="search-docs-reset" class="p-search-box__reset u-no-margin--right" alt="reset"><i class="p-icon--close"></i></button>
             <button type="submit" class="p-search-box__button" alt="search"><i class="p-icon--search"></i></button>
           </form>
+        </nav>
+      </div>
+    </header>
+
+    <div class="docs-container">
+      <hr class="u-no-margin u-hide--small">
+      <aside class="p-sidebar">
+        <div class="p-sidebar__content">
           <nav class="p-sidebar-nav">
             <ul class="p-sidebar-nav__list" id="docs-list-unsorted">
               <li class="p-sidebar-nav__item">
