--- a/scss/_patterns_icons.scss
+++ b/scss/_patterns_icons.scss
@@ -57,6 +57,7 @@
   }
 
   h1,
+  .p-heading-1,
   .p-heading--one,
   .u-match-h1 {
     [class*='p-icon'] {
@@ -66,6 +67,7 @@
   }
 
   h2,
+  .p-heading-2,
   .p-heading--two,
   .u-match-h2 {
     [class*='p-icon'] {
@@ -75,6 +77,7 @@
   }
 
   h3,
+  .p-heading-3,
   .p-heading--three,
   .u-match-h3 {
     [class*='p-icon'] {
@@ -84,6 +87,7 @@
   }
 
   h4,
+  .p-heading-4,
   .p-heading--four,
   .u-match-h4 {
     [class*='p-icon'] {
