--- a/scss/_settings_system.scss
+++ b/scss/_settings_system.scss
@@ -1,2 +1,7 @@
 // Global system settings
-$app-version: '2.7.0' !default;
+@if function-exists(vanilla-version) {
+  $app-version: vanilla-version();
+} @else {
+  // update the fallback with major releases
+  $app-version: '2.0.0' !default;
+}
