--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -172,14 +172,7 @@
       </aside>
 
       <main class="p-content" id="main-content">
-        {% if path == "/" %}
-        <div class="p-strip--image is-dark" style="background-image: url('https://assets.ubuntu.com/v1/775cc62b-vanilla-grad-background.png'); background-position: 75% 50%;">
-          <div class="p-content__row">
-            <h1>Vanilla documentation</h1>
-            <p class="p-heading--four">Everything you need to get your project started with Vanilla.</p>
-          </div>
-        </div>
-        {% endif %}
+        {% block banner %}{% endblock %}
         <div class="p-strip is-shallow">
           <div class="p-content__row">
             {% block content %}{{ content | safe }}{% endblock content %}
