Add bottom margin to definition list

--- a/docs/examples/templates/typographic-spacing.html
+++ b/docs/examples/templates/typographic-spacing.html
@@ -1597,6 +1597,36 @@
     </p>
   </div>
 </div>
+<hr>
+<div class="row">
+  <div class="col-6">
+    <h3>List styles and spacing</h3>
+    <p>This is just a line of text before unordered list:</p>
+    <ul>
+      <li>Unordered list</li>
+      <li>Unordered list unordered list unordered list unordered list unordered list unordered list unordered list unordered list</li>
+      <li>Unordered list</li>
+    </ul>
+    <p>This is just a line of text before ordered list:</p>
+    <ol>
+      <li>Ordered list</li>
+      <li>Ordered list ordered list ordered list ordered list ordered list ordered list ordered list ordered list ordered list</li>
+      <li>Ordered list</li>
+    </ol>
+    <p>This is just a line of text before definition list:</p>
+    <dl>
+      <dt>Definition item</dt>
+      <dd>Definition description</dd>
+      <dt>Definition item with two descriptions</dt>
+      <dd>Definition first description</dd>
+      <dd>Definition second description</dd>
+      <dt>Definition item with long description</dt>
+      <dd>Definition long description long description long description long description long description long description long description long description</dd>
+    </dl>
+    <p>This is just a line of text after the lists.</p>
+  </div>
+</div>
+<hr>
 <div class="row">
   <a target="_blank" rel="noopener noreferrer"
     href="https://assets.ubuntu.com/v1/06153e05-screenshot-tv-homepage-wide-image-900x334.jpg"><img
