--- a/scss/_base_lists.scss
+++ b/scss/_base_lists.scss
@@ -25,9 +25,14 @@
     }
   }
 
-  li,
-  dl {
+  li {
     margin: 0;
+    padding: 0;
+  }
+
+  dl {
+    margin-bottom: $spv-outer--scaleable;
+    margin-top: 0;
     padding: 0;
   }
 
