--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,7 +27,7 @@
       <div class="p-navigation__row--full-width">
         <div class="p-navigation__banner">
           <div class="p-navigation__logo">
-            <a class="p-navigation__link" href="https://vanillaframework.io">
+            <a class="p-navigation__item" href="https://vanillaframework.io">
               <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/d96d86b5-vanilla_black-orange_hex.svg" alt="Vanilla framework logo">
             </a>
           </div>
@@ -41,12 +41,12 @@
           <span class="u-off-screen">
             <a href="#main-content">Jump to main content</a>
           </span>
-          <ul class="p-navigation__links">
-              <li class="p-navigation__link {% if '/examples' not in path %}is-selected{% endif %}"><a href="/">Docs</a></li>
-              <li class="p-navigation__link {% if '/examples' in path %}is-selected{% endif %}"><a href="/examples">Examples</a></li>
-              <li class="p-navigation__link"><a href="https://vanillaframework.io/accessibility">Accessibility</a></li>
-            <li class="p-navigation__link"><a href="https://vanillaframework.io/browser-support">Browser support</a></li>
-            <li class="p-navigation__link"><a href="https://vanillaframework.io/contribute">Contribute</a></li>
+          <ul class="p-navigation__items">
+            <li class="p-navigation__item {% if '/examples' not in path %}is-selected{% endif %}"><a class="p-navigation__link" href="/">Docs</a></li>
+            <li class="p-navigation__item {% if '/examples' in path %}is-selected{% endif %}"><a class="p-navigation__link" href="/examples">Examples</a></li>
+            <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/accessibility">Accessibility</a></li>
+            <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/browser-support">Browser support</a></li>
+            <li class="p-navigation__item"><a class="p-navigation__link" href="https://vanillaframework.io/contribute">Contribute</a></li>
           </ul>
           <form class="p-search-box" action="/search">
             <input type="search" id="search-docs" class="p-search-box__input" name="q" {% if query %}value="{{ query }}"{% endif %} placeholder="Search the docs" title="Search the documentation" required />
